# TheColloseum

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  _backup.calco  back  build.sh  calco.todo  conventions.txt  vscode-builds
assets/data/: input.toml  palceholder.xml  sample.toml
assets/shaders/: default_frag.fs  default_vert.vs
assets/shaders/default/: default.fs
assets/shaders/perlin/: perlin.fs
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/tomlc99/: CMakeLists.txt
libs/tomlc99/src/: toml.c
src/: main.c  opengl_main.c  test_main.c  winapi_window_main.c
src/base/: base_bitset.c  base_bitset.h  base_context.h  base_hashmap.c  base_hashmap.h  base_include.h  base_log.h  base_math.c  base_math.h  base_memory.c  base_memory.h  base_string.c  base_string.h  base_types.c  base_types.h
src/draw/: draw.c  draw.h
src/file_io/: file_io.c  file_io.h
src/input/: README.md  input.c  input.h
src/os/: os.c  os.h  os_win.c  os_window.c  os_window.h
src/os/input/: os_input.c  os_input.h  os_input_keycodes.h
src/os/input/impl/: os_input_keycodes_glfw.h  os_input_keycodes_windows.h
src/render/: render.c  render.h  render_gl33.c  render_gl33.h
src/render/camera/: render_camera.c  render_camera.h
